--- a/estilos5.css
+++ b/estilos5.css
@@ -57,14 +57,34 @@ body {
     border: 2px dashed var(--color-blanco);
     border-radius: 5px;
     color: var(--color-blanco);
-    shape-margin: 2px 2px 2px var(--color-blanco);
+}
+.main aside {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    width: calc(100% - 10px);
+    min-width: 310px;
+    min-height: 40px;
+    background-color: var(--five-color);
+    margin: 5px;
+    border-radius: 15px;
+    text-align: center;
+}
+.main aside li{
+    display: inline-block;
+    font-size: var(--size-parrafos);
+    list-style: none;
+    text-align: center;
+    padding: 5px 7px;
+    margin: 4px 6px;
+    border-bottom: 1px solid black;
 }
 .main section{
     display: flex;
     flex-wrap: wrap;
     width: calc(100% - 10px);
     min-width: 310px;
-    height:400px;
+    min-height: 400px;
     background-color: var(--second-color);
     margin: 5px;
     border-radius: 15px;
@@ -72,29 +92,35 @@ body {
 }
 .main__section1 .section-d1, .section-d2, .section-d3, .section-d4 {
     width: calc(50% - 10px);
-    height: 190px;
+    min-height: 190px;
     margin: 5px;
+    padding: 5px;
     border: 2px dashed var(--color-blanco);
     border-radius: 15px;
     justify-content: space-evenly;
-}
-.main__section1 .section-d1 {
     background-color: var(--four-color);
 }
-.main__section1 .section-d2 {
-    background-color: var(--four-color);
+.main__section1 div > h3 {
+    font-size: var(--size-parrafos);
+    color: var(--first-color);
+    background-color: var(--color-blanco);
+    margin: 5px;
 }
-.main__section1 .section-d3 {
-    background-color: var(--four-color);
+.main__section1 div > p {
+    font-size: 1.2rem;
+    color: black;
+    margin: 5px;
 }
-.main__section1 .section-d4 {
-    background-color: var(--four-color);
+div > .main__section1-img {
+    width: 100px;
+    height: auto;
 }
 
-.main__section2 .section-d1, .section-d2 {
+/*.main__section2 .section-d1, .section-d2 {
     width: calc(50% - 10px);
     height: 190px;
     margin: 5px;
+    padding: 5px;
     border: 2px dashed var(--color-blanco);
     border-radius: 15px;
     justify-content: space-evenly;
@@ -104,4 +130,4 @@ body {
 }
 .main__section2 .section-d2 {
     background-color: var(--five-color);
-}
+} */
